--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-<div>
-    Hola Feler owo
-</div>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Basic Navbar</title>
+        <link rel="stylesheet" href="styles.css"> <!-- Link to the custom CSS file -->
+    </head>
+    
+    <body>
+
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#">MySite</a>
+            </div>
+            <ul class="links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    
+    </body>
+</html>
