--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Basic Navbar</title>
-        <link rel="stylesheet" href="styles.css"> <!-- Link to the custom CSS file -->
-    </head>
-    
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Navbar</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 font-sans">
 
-        <nav class="navbar">
-            <div class="logo">
-                <a href="#">MySite</a>
-            </div>
-            <ul class="links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    
-    </body>
+    <nav class="navbar bg-gray-800 text-white p-4 flex justify-between items-center">
+        <div class="logo text-2xl font-bold">
+            <a href="#">MySite</a>
+        </div>
+        <ul class="flex space-x-4">
+            <li><a href="#" class="hover:bg-gray-600 p-2 rounded">Home</a></li>
+            <li><a href="#" class="hover:bg-gray-600 p-2 rounded">About</a></li>
+            <li><a href="#" class="hover:bg-gray-600 p-2 rounded">Services</a></li>
+            <li><a href="#" class="hover:bg-gray-600 p-2 rounded">Contact</a></li>
+        </ul>
+    </nav>
+
+</body>
 </html>
