--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <nav class="bg-white border-gray-200 dark:bg-gray-900">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-                <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                    <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+                <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                    <img src="https://cdn.discordapp.com/attachments/1304602540222185535/1304602556076654713/icon_sample.png?ex=672ffd4f&is=672eabcf&hm=336c3c4f8188c44fdaf20fb633fb9fb2b2998915f73c06cfea5d1becafedbd48&" class="h-8" alt="Flowbite Logo" />
                     <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
                 </a>
             <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
