--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
             </div>
         </nav>
     </body>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </html>
