--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 </div>
             </div>
         </nav>
-
+        <div>
+            Content!?
+        </div>
         <!-- Include JS file -->
         <script src="index.js"></script>
     </body>
