Fix js route on index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             Content!?
         </div>
         <!-- Include JS file -->
-        <script src="/assets/js/index.js"></script>
+        <script src="assets/js/index.js"></script>
     </body>
 </html>
