purple animation thing

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="grid grid-cols-1 pr-2">
                 <div class="pb-2">
 
-                    <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full">
+                    <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                         <!-- Image Section -->
                         <div class="relative overflow-hidden bg-cover bg-no-repeat flex-grow">
                             <img class="rounded-t-lg w-full h-full object-cover" src="https://tecdn.b-cdn.net/img/new/slides/041.webp" alt="" />
@@ -88,7 +88,7 @@
                 <div class="grid grid-cols-2 pt-2">
                     <div class="pr-2">
 
-                        <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full">
+                        <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                             <!-- Image Section -->
                             <div class="relative overflow-hidden bg-cover bg-no-repeat flex-grow">
                                 <img class="rounded-t-lg w-full h-full object-cover" src="https://tecdn.b-cdn.net/img/new/slides/041.webp" alt="" />
@@ -112,7 +112,7 @@
                     </div>
                     <div class="pl-2">
                         
-                        <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full">
+                        <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                             <!-- Image Section -->
                             <div class="relative overflow-hidden bg-cover bg-no-repeat flex-grow">
                                 <img class="rounded-t-lg w-full h-full object-cover" src="https://tecdn.b-cdn.net/img/new/slides/041.webp" alt="" />
@@ -138,7 +138,7 @@
             </div>
             <div class="pl-2">
 
-                <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full">
+                <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                     <!-- Image Section -->
                     <div class="relative overflow-hidden bg-cover bg-no-repeat flex-grow">
                         <img class="rounded-t-lg w-full h-full object-cover" src="https://tecdn.b-cdn.net/img/new/slides/041.webp" alt="" />
