--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <h1 class="main-title">Archive</h1>
                 </div>
                 <div class="mb-4">
-                    <p class="italic">Lorem ipsum soiuehf sidhfkjshdf skdjhf</p>
+                    <p class="italic">"A cute inspirational yet mystical quote."</p>
                 </div>
                 <div>
-                    <button id="scroll-btn" class="btn">Journey Downward</button>
+                    <button id="scroll-btn" class="btn home-button">Begin the Journey</button>
                 </div>
             </div>
         </div>
@@ -62,8 +62,8 @@
             </div>
         </div> -->
           
-        <div id="target-section" class="below-content grid grid-cols-2 p-4">
-            <div class="grid grid-cols-1 pr-2">
+        <div id="target-section" class="below-content grid grid-cols-1 lg:grid-cols-2 p-4">
+            <div class="grid grid-cols-1 lg:pr-2">
                 <div class="pb-2">
 
                     <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
@@ -88,8 +88,8 @@
                     </div>
 
                 </div>
-                <div class="grid grid-cols-2 pt-2">
-                    <div class="pr-2">
+                <div class="grid grid-cols-1 lg:grid-cols-2 pt-2">
+                    <div class="pb-2 lg:pr-2 lg:pb-0">
 
                         <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                             <!-- Image Section -->
@@ -113,7 +113,7 @@
                         </div>
 
                     </div>
-                    <div class="pl-2">
+                    <div class="pt-2 pb-2 lg:pl-2 lg:pt-0 lg:pb-0">
                         
                         <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                             <!-- Image Section -->
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pl-2">
+            <div class="pt-2 lg:pl-2 lg:pt-0">
 
                 <div class="block rounded-lg text-black bg-white shadow-secondary-1 text-surface flex flex-col h-full ripple-container" data-twe-ripple-init data-twe-ripple-color="light">
                     <!-- Text Section First -->
